--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       text-align: center;
       font-size: 30px; /* Увеличенный шрифт */
       font-weight: bold; /* Жирный шрифт */
-      color: red; /* Красный цвет текста */
       padding: 40px; /* Увеличенные отступы */
       border-radius: 10px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
@@ -44,6 +43,14 @@
         opacity: 1;
         transform: translateY(0);
       }
+    }
+
+    .red-text {
+      color: red; /* Красный цвет для первой строки */
+    }
+
+    .black-text {
+      color: black; /* Черный цвет для остального текста */
     }
 
     a {
@@ -64,18 +71,20 @@
 </head>
 <body>
 <div class="message" id="message">
-  Вы попались! <br>
-  Вы перешли по фишинговой ссылке. Поздравляем! Мошенники могли получить доступ к вашим данным: посещаемые сайты, сохранённые пароли и даже данные банковских карт. <br>
+  <div class="red-text">Вы попались!</div> <!-- Первая строка красная -->
+  <div class="black-text">Вы перешли по фишинговой ссылке. Поздравляем! Мошенники могли получить доступ к вашим данным: посещаемые сайты, сохранённые пароли и даже данные банковских карт.</div>
+  <br>
   <a onclick="changeText()">Перейти дальше</a>
 </div>
 <div class="message hidden" id="finalMessage">
-  Ещё один клик — и вы откроете двери мошенникам! <br>
-  Они могут установить на ваше устройство хитроумное вредоносное ПО, получая доступ к вашим данным и управления вашей системой. Будьте внимательны, чтобы не стать жертвой их уловок! <br>
+  <div class="red-text">Ещё один клик — и вы откроете двери мошенникам!</div> <!-- Первая строка красная -->
+  <div class="black-text">Они могут установить на ваше устройство хитроумное вредоносное ПО, получая доступ к вашим данным и управления вашей системой. Будьте внимательны, чтобы не стать жертвой их уловок!</div>
+  <br>
   <a onclick="closeMessage()">Закрыть</a>
 </div>
 <div class="message hidden" id="closeMessage">
-  Вот и всё! <br>
-  Вы сами открыли двери мошенникам, предоставив им доступ к вашему компьютеру, телефону и всем вашим личным данным. Не дайте им шанса! Защитите себя и свои устройства от их коварных уловок!
+  <div class="red-text">Вот и всё!</div> <!-- Первая строка красная -->
+  <div class="black-text">Вы сами открыли двери мошенникам, предоставив им доступ к вашему компьютеру, телефону и всем вашим личным данным. Не дайте им шанса! Защитите себя и свои устройства от их коварных уловок!</div>
 </div>
 
 <script>
