--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 </head>
 <body>
 <div class="message" id="message">
-  <div class="red-text">Вы попались!</div> <!-- Первая строка красная -->
-  <div class="black-text">Вы перешли по фишинговой ссылке. Поздравляем! Мошенники могли получить доступ к вашим данным: посещаемые сайты, сохранённые пароли и даже данные банковских карт.</div>
+  <div class="red-text">Вы открыли вредоносный файл!</div> <!-- Первая строка красная -->
+  <div class="black-text">Мошенники могли получить доступ к вашим данным: посещаемые сайты, сохранённые пароли и даже данные банковских карт.</div>
   <br>
-  <a onclick="changeText()">Перейти дальше</a>
+  <a onclick="changeText()">Закрыть</a>
 </div>
 <div class="message hidden" id="finalMessage">
   <div class="red-text">Ещё один клик — и вы откроете двери мошенникам!</div> <!-- Первая строка красная -->
-  <div class="black-text">Они могут установить на ваше устройство хитроумное вредоносное ПО, получая доступ к вашим данным и управления вашей системой. Будьте внимательны, чтобы не стать жертвой их уловок!</div>
+  <div class="black-text">Вы перешли по фишинговой ссылке. Они могут установить на ваше устройство хитроумное вредоносное ПО, получая доступ к вашим данным и управления вашей системой. Будьте внимательны, чтобы не стать жертвой их уловок!</div>
   <br>
   <a onclick="closeMessage()">Закрыть</a>
 </div>
