--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <div class="message hidden" id="closeMessage">
   <div class="red-text">Вот и всё!</div> <!-- Первая строка красная -->
-  <div class="black-text">Вы сами открыли двери мошенникам, предоставив им доступ к вашему компьютеру, телефону и всем вашим личным данным. Не дайте им шанса! Защитите себя и свои устройства от их коварных уловок!</div>
+  <div class="black-text">Вы сами открыли доступ мошенникам к вашему компьютеру, телефону и личным данным. Будьте внимательны и осторожны! Используйте антивирусное программное обеспечение, проверяйте ссылки перед переходом и никогда не открывайте подозрительные файлы!</div>
 </div>
 
 <script>
