--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <a onclick="closeMessage()">Закрыть</a>
 </div>
 <div class="message hidden" id="closeMessage">
-  <div class="red-text">Вот и всё!</div> <!-- Первая строка красная -->
+  <div class="red-text">Вот и всё! Вредоносное ПО уже установлено!</div> <!-- Первая строка красная -->
   <div class="black-text">Вы сами открыли доступ мошенникам к вашему компьютеру, телефону и личным данным. Будьте внимательны и осторожны! Используйте антивирусное программное обеспечение, проверяйте ссылки перед переходом и никогда не открывайте подозрительные файлы!</div>
 </div>
 
