--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>
 <div class="message hidden" id="finalMessage">
   <div class="red-text">Ещё один клик — и вы откроете двери мошенникам!</div>
-  <div class="black-text">Вы перешли по фишинговой ссылке. Они могут установить на ваше устройство хитроумное вредоносное ПО, получая доступ к вашим данным и управления вашей системой. Будьте внимательны, чтобы не стать жертвой их уловок!</div>
+  <div class="black-text">Вы перешли по фишинговой ссылке. Они могут установить на ваше устройство хитроумное вредоносное ПО, получая доступ к вашим данным и управлению вашей системой. Будьте внимательны, чтобы не стать жертвой их уловок!</div>
   <br>
   <a onclick="closeMessage()">Закрыть</a>
 </div>
